#Business katmanı eklendi

--- a/FilmÖneriDB_/FilmÖneriDB_.csproj
+++ b/FilmÖneriDB_/FilmÖneriDB_.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FilmRecommend.Business\FilmRecommend.Business.csproj" />
     <ProjectReference Include="..\FilmRecommend.Data\FilmRecommend.Data.csproj" />
     <ProjectReference Include="..\FilmRecommend.Entities\FilmRecommend.Entities.csproj" />
   </ItemGroup>
